--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docsify-pangu",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sy-records/docsify-pangu.git"
@@ -17,8 +17,17 @@
     "url": "https://github.com/sy-records/docsify-pangu/issues"
   },
   "homepage": "https://github.com/sy-records/docsify-pangu#readme",
-  "dependencies": {
-    "pangu": "^4.0.7"
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "rollup": "^1.23.1",
+    "rollup-plugin-async": "^1.2.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify": "^6.0.4"
   },
-  "scripts": {}
+  "scripts": {
+    "build": "cross-env NODE_ENV=production node build/build.js"
+  }
 }
