--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docsify-pangu",
   "version": "1.0.0",
-  "description": "",
+  "description": "A docsify plugin for automatically adding spaces.",
   "main": "src/index.js",
   "repository": {
     "type": "git",
