--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "docsify-pangu",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A docsify plugin for automatically adding spaces.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sy-records/docsify-pangu.git"
@@ -18,16 +18,9 @@
   },
   "homepage": "https://github.com/sy-records/docsify-pangu#readme",
   "devDependencies": {
-    "cross-env": "^6.0.3",
-    "rollup": "^1.23.1",
-    "rollup-plugin-async": "^1.2.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.4"
+    "terser": "^5.37.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production node build/build.js"
+    "build": "node build/build.js"
   }
 }
