--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docsify-pangu",
-  "version": "1.2.0",
+  "name": "@sy-records/docsify-pangu",
+  "version": "2.0.0",
   "description": "A docsify plugin for automatically adding spaces.",
   "main": "dist/index.js",
   "repository": {
